# Puffin

./: .gitignore  .travis.yml  BUILD.md  BUILD.txt  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.txt  License.txt  MIGRATION_ROADMAP.md  README.md  README.txt  config-cmake.h.in  issues.txt
cmake/Modules/: FindFFTW3.cmake
compile/: compile-archie  link-archie
doc/: DesignOfTwissParameterStorageInPuffin.odp  InputFiles.pptx  PuffinMemManagement.odp  README.txt  fortran.dxg  fortran.dxg.in  long_draw.odg  manual.tex  puffin_notes.aux  puffin_notes.tex  subroutines.ods  subroutines.txt  trans_draw_progress.odg
doc/bfields/: showBFields.py
inputs/: README.md  beam_file.in  seed_file.in
inputs/example/: hidding.in  seed_file.in
puffin/: CMakeLists.txt
puffin/app/: main.f90
puffin/lib/: Bnrutil.f90  CMakeLists.txt  Dchecks.f90  EDerivGlobals.f90  GEquations.f90  GlobalTypes.f90  Hgrids.f90  HinitVars.f90  Hrhs_vars.f90  InitDataType.f90  JFiElec.f90  JFiElec1D.f90  Jrhs.f90  Jsetupcalcs.f90  Msetup.f90  NMain.f90  acc_lattice.f90  adapter_globals.f90  array_functions.f90  bfields.f90  para_field.f90  undulator.f90
puffin/lib/common/: file_type.f90  puffProvenance.f90.in  puffin_constants.f90  puffin_fftwInfo.f90  puffin_kinds.f90  puffin_mpiInfo.f90  typeMetadata.f90.in
puffin/lib/diffraction/: Ldiffraction.f90  Ltransforms.f90  masks.f90
puffin/lib/interaction/: GEquations.f90  JFiElec.f90  Jrhs.f90  KDerivative.f90  puffin_mpi_RK4.f90  system_interpolation_1D.f90
puffin/lib/io/: CIO.f90  EreadDists.f90  FreadData.f90  H5in.f90  MASPin.f90  av_write.f90  choWrite.f90  cwrites.f90  h5_in.f90  hdf5PuffID.f90  hdf5PuffLow.f90  hdf5_puff.f90  hdf5_puff_coll.f90  lattice_file_writes.f90  read_base_input.f90  write_adapter.f90
puffin/lib/macroparticle_generation/: Hgrids.f90  MPfDists.f90  beam_conditioning.f90  electron_init_grids.f90  gen_macros.f90  gen_macros_new.f90  mp_sequences.f90  noise.f90  parBeam.f90  particleFunctions.f90  random.f90  remove_low_weights.f90  simple_electron_gen.f90
puffin/lib/parallel/: DParallelSetUp.f90  para_field.f90
puffin/lib/setup/: Msetup.f90  checks.f90  setup.f90  setup_calcs.f90  setup_transverse.f90
puffin/lib/undulator/: HwigglerVar.f90  init_conds.f90
puffin/lib/utilities/: Ffunctions.f90  FgToP2.f90  error_fn.f90  scale.f90
scimake/: CMakeLists.txt  DetermineVisItArchitecture.cmake  EclipseLicense.txt  Makefile.show  README.txt  SciCChecks.cmake  SciCppCheck.cmake  SciCxxChecks.cmake  SciCxxFindVersion.cmake  SciDiffMacros.cmake  SciDocLogic.cmake  SciFinalize.cmake  SciFindCompilerVersion.cmake  SciFortranChecks.cmake  SciFortranDouble.cmake  SciFortranFindVersion.cmake  SciFuncsMacros.cmake  SciGetDepsFromInstall.cmake  SciInit.cmake  SciLinkChecks.cmake  SciMpiLauncher.cmake  SciMultiArchKernels.cmake  SciOmpSseAvx.cmake  SciSeparateLibs.cmake  SciStart.ctest  SciSvnInfo.cmake  SciTestConfig.cmake  SciTextCompare.cmake  SciTextCompareManyCmd.cmake  SciTranspPreprocess.cmake  SciUnitTestMacros.cmake  SciWinFlags.cmake  UseLATEX.cmake  mklinks.sh  rmcomms.sed  xvfb-run.sh
scimake/Modules/: FindEpicsExtensions.cmake  FindSciAcis3DInterOp.cmake  FindSciAcisVizExchange.cmake  FindSciAdios.cmake  FindSciAtlas.cmake  FindSciBabel.cmake  FindSciBlasLapack.cmake  FindSciBoost.cmake  FindSciBotan.cmake  FindSciCLapackCMake.cmake  FindSciCarve.cmake  FindSciCfitsio.cmake  FindSciCgm.cmake  FindSciChecker.cmake  FindSciChombo.cmake  FindSciCppCheck.cmake  FindSciCubit.cmake  FindSciCuda.cmake  FindSciCusp.cmake  FindSciDagmc.cmake  FindSciDakota.cmake  FindSciDocutils.cmake  FindSciDoxygen.cmake  FindSciEigen3.cmake  FindSciExodusii.cmake  FindSciFacetsIfc.cmake  FindSciFcIoWrappers.cmake  FindSciFftw.cmake  FindSciFftw3.cmake  FindSciFluxgrid.cmake  FindSciFmcfm.cmake  FindSciFreeType.cmake  FindSciG4engine.cmake  FindSciG4examples.cmake  FindSciG4userdocs.cmake  FindSciGaCode.cmake  FindSciGeant4.cmake  FindSciGraphviz.cmake  FindSciGras.cmake  FindSciGrin.cmake  (+69 more)
scimake/trycompile/: Makefile.am  checkCompilerRTTI.cxx  gendeclstatics.cxx  modulesrcfile.f90  mpi_h.cxx  mpi_mod.f90  pragma_omp_simd.cxx  shared_ptr.cxx  stdabsdbl.cxx
scripts/: README.md  puffin.bluewonderphase1.gnu.lsf  puffin.bluewonderphase2.intel-impi.lsf  puffin.bluewonderphase2.intel2015.lsf  puffin.napier.gcc491.lsf
scripts/hartree/: puffin.bluewonderphase1.gnu.lsf  puffin.bluewonderphase2.intel-impi.lsf  puffin.bluewonderphase2.intel2015.lsf  puffin.napier.gcc491.lsf
source/: AFFTW_Constants.f90  AIO.c  Aparatype.f90  BCIOWrapper.f90  BFileType.f90  BParallelInfoType.f90  BTransformInfoType.f90  Bglobalnodes.f90  Bnrutil.f90  BsddsWriter.f90  BtypesAndConstants.f90  CIO.f90  CMakeLists.txt  CinitConds.f90  CremLow.f90  DParallelSetUp.F90  DParallelSetUp.f90  Dchecks.f90  EArrayFunctions.f90  EDerivGlobals.f90  Erandom.f90  EreadDists.f90  Fdatawrite.f90  Ferror_fn.f90  Ffunctions.f90  FgToP2.f90  FparBeam.f90  FreadData.f90  FsddsPuffin.f90  GEquations.f90  GEquations2.f90  GMPfDists.f90  GenMacros.F90  GenMacros.f90  Gextra.f90  GparticleFunctions.f90  H5in.f90  Hbasis_fn.f90  Hgrids.f90  HinitVars.f90  (+65 more)
test/: CMakeLists.txt  compile-puf.sh  helloworld.pf  runtests.sh  simpleTest.sh  test-puf.sh  testChicane.pf  testDrift.pf  testFFunctions.pf  testHdf5Puff.pf  testMPIIntegration.pf  testQuad.pf  testScale.pf  testSuites.inc  testTests.pf
test/expected/: f1main_expected_electrons.h5  f1main_expected_field.h5  f1main_expected_integrated.h5
test/inputs/: f1main.in
utilities/: ReorderColMajorFtoColMinorC.py  aggregateFiles.py  aggregateFilesSepIntegratedFiles.py  aggregatePower.py  autoPhSh.m  emittance2.py  getDBNames.py  mergeFields.py  mergeParticles.py  plotPolarization.py  plotPolarizationHilbert.py  powPrep.py  reduceField.py  reduce_particles.py  specro-scrap.py  visitLauncherPuffin.py
utilities/post/: ReorderColMajorFtoColMinorC.py  ReorderField.py  aggregateFiles.py  mergeFields.py  mergeParticles.py  mergeParticlesOrig.py  powPrep.py  reduceField.py  reduce_particles.py  writeChargeOutput.py
utilities/pyPlotting/: __init__.py  (+31 more)
(+183 files in other folders)
