## ############################################################
##
## File:    Makefile.am
##
## Purpose: Purpose: Needed for cmake in an autotools project
##
## $Id: Makefile.am 792 2015-04-17 14:07:44Z jrobcary $
##
## Copyright &copy; 2012-2015, Tech-X Corporation, Boulder, CO.
## See LICENSE file (EclipseLicense.txt) for conditions of use.
##
## ############################################################

SUBDIRS =

EXTRA_DIST = \
  checkCompilerRTTI.cxx gendeclstatics.cxx modulesrcfile.f90 \
  mpi_mod.f90 mpi_h.cxx stdabsdbl.cxx

