# #############################################################
#
# File:    Makefile.am
#
# Purpose: Purpose: Needed for cmake in an autotools project
#
# $Id: Makefile.am 975 2016-01-09 20:04:17Z cary $
#
# Copyright &copy; 2012-2016, Tech-X Corporation, Boulder, CO.
# See LICENSE file (EclipseLicense.txt) for conditions of use.
#
# #############################################################

SUBDIRS =

EXTRA_DIST = \
  checkCompilerRTTI.cxx gendeclstatics.cxx modulesrcfile.f90 \
  mpi_mod.f90 mpi_h.cxx stdabsdbl.cxx

